[package]
name = "clanker_substreams"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = "0.7"
substreams-ethereum = "0.11"
substreams-database-change = "4"
prost = "0.13"
prost-types = "0.13"
hex = "0.4"
hex-literal = "0.4"
num-bigint = "0.4"
ethabi = "18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
substreams-ethereum = "0.11"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
